--- a/Cadastro.html
+++ b/Cadastro.html
@@ -16,8 +16,8 @@
                 <input type="nome" id="nome" placeholder="Seu nome" > <br />
                 <label for="email">E-mail </label>
                 <input type="email" id="email" placeholder="Seu e-mail" > <br/>
-                <label for="senha">Senha </label>
-                <input type="senha" id="senha" placeholder="Sua senha"> <br />
+                <label for="password">Senha </label>
+                <input type="password" id="password" placeholder="Sua senha"> <br />
                 <button type="submit" >Enviar Formulário</button>
                 <button type="reset" >Limpar campos</button>
             </section>
