--- a/portal_de_noticias_final.html
+++ b/portal_de_noticias_final.html
@@ -13,7 +13,7 @@
             <nav>
                 <ul> <!--definir linhas-->
                     <li> <!--links-->
-                        <a href="#TV" title="Ir para seção BBB 24">BBB 24</a>
+                        <a href="#TV" title="Ir para seção BBB 24">BBB 14</a>
                     </li>
                     <li>
                         <a href="#sports" title="Ir para a seção Esportes">Esportes</a>
@@ -27,7 +27,7 @@
             <h2>BBB 14</h2>
             <div class="articles">
                 <article> <!--inicio do artigo das profissões-->
-                    <img src="Midias/Imagem/1-participantes-bbb-24.webp" alt="profissão_dos_participantes" >
+                    <img src="Midias/Imagem/17045043496598ac1d29c82_1704504349_3x2_md.jpg" alt="participantes_do_bbb24" >
                     <header>
                         <time class="creation_date">05/01/2024 ás 20:09</time>
                     </header>
@@ -38,7 +38,7 @@
                     <a href="#">Leia mais</a>
                 </article> <!--fim do artigo das profissões-->
                 <article> <!--inicio artigo estreia do bbb-->
-                    <img src="Midias/Imagem/cropped-BBB24-1.jpg" alt="logo_bbb24">
+                    <img src="Midias/Imagem/bbb24-2.jpg" alt="5_participantes_do_bbb24">
                     <header>
                         <time class="creation_date">05/01/2024 ás 20:15</time>
                     </header>
@@ -49,7 +49,7 @@
                     <a href="#">Leia mais</a>
                 </article> <!--fim do artigo estreia do bbb-->
                 <article> <!--inicio do artigo mc bin laden no bbb-->
-                    <img src="Midias/Imagem/WhatsApp-Image-2024-01-05-at-14.47.31.webp" alt="mc_bin_laden_no_bbb">
+                    <img src="Midias/Imagem/mc-bin-laden.jpg" alt="perfil_bbb_mc_bin_laden">
                     <header>
                         <time class="creation_date">05/01/2024 ás 20:19</time>
                     </header>
@@ -67,7 +67,7 @@
             <H2>Esportes</H2>
             <div class="articles">
                 <article> <!--inicio do artigo novo zagueiro do inter-->
-                    <img src="Midias/Imagem/GC9AjZqWwAAZyp0.jpg_large" alt="robert_renan_anuncio">
+                    <img src="Midias/Imagem/Wide-1920x1080_ROBERTRENAN-1365x768.png" alt="robert_renan_anuncio">
                     <header>
                         <time class="creation_date">05/01/2024 ás 20:24</time>
                     </header>
@@ -87,7 +87,7 @@
                     <a href="#">Leia mais</a>
                 </article> <!--fim do artigo sobre novo atacante-->
                 <article>
-                    <img src="Midias/Imagem/Borre-Colombia-jpg.avif" alt="borre_com_camisa_colombia">
+                    <img src="Midias/Imagem/rafael-santos-borre-atacante-do-eintracht-frankfurt-negociou-com-palmeiras-e-gremio-no-ano-passado-1652913105614_v2_4x3-780x470.jpg" alt="borre_com_camisa_colombia">
                     <header>
                         <time class="creation_date">05/01/2024 ás 20:33</time>
                     </header>
